added new test files, implementing jwt, authorisation, created third party api integration, changes to routes, new models for meeting and announcement views, new locations schema, new weather cache sql table changes to relationship of other tables foreign key and columns
