# controllers/checkRoleMiddleware.js
@@ -14,14 +14,31 @@
  * @param {Function} next - Koa next function
  * @throws {Error} 403 - Forbidden, the user is neither the owner or admin
  */
-exports.checkRole = async function checkRole(ctx, next) {
-    const userID = ctx.state.user.ID;
-    const issueID = ctx.params.id;
-    const result = await ctx.app.context.db.query('SELECT authorID FROM issues WHERE ID=?', [issueID]);
 
-    if (!result || (result.authorID !== userID && ctx.state.user.role !== 'admin')) {
-        ctx.status = 403;
+exports.requireRole = function requireRole(role, isOwner = false) {
+    return async (ctx, next) => {
+        const userID = ctx.state.user.ID;
+    
+        // Check if the user has the required role
+        if (ctx.state.user.role === role) {
+          await next();
+        } else if (isOwner) {
+          // If the owner is allowed, check if the user is the owner (author) of the resource
+          const authorIDField = role === 'admin' ? 'authorID' : 'authorID';
+          const tableName = ctx.path.includes('meetings') ? 'meetings' : 'issues';
+          const resourceID = ctx.params.id;
+          const result = await ctx.app.context.db.query(`SELECT ${authorIDField} FROM ${tableName} WHERE ID=?`, [resourceID]);
+    
+          if (result.length > 0 && result[0][authorIDField] === userID) {
+            await next();
+          } else {
+            ctx.status = 403;
+          }
+        } else {
+          ctx.status = 403;
+        }
+      };
     }
 
-    await next();
-};
+//requireRole('admin')
+//requireRole('admin', true) value true if the user is the author of the post[issues and meeting]
